[package]
name = "labrador"
version = { workspace = true }
edition = { workspace = true }

[[example]]
name = "main"
required_features = ["test"]
path = "src/example/main.rs"

[dependencies]
rand = { workspace = true }
rayon = {workspace = true, optional = true}

profiler_macro = { workspace = true }
ark-std = { workspace = true, optional = true }
scalarff = "0.8.1"
ring-math = "0.4.0"
anyhow = "1.0.94"



[features]
default = ["parallel"]
parallel = ["rayon"]
profiler = ["ark-std/print-trace"]
